# fast-chat-sample

./: .cspell.json  README.md  Taskfile.yml  package-lock.json  pyproject.toml  requirements-dev.txt  requirements.txt
src/til-20231105/: index.md  pyproject.toml
